Add Colab training notebook, RUGD B0 model, reorganize model folders, update scripts

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,6 @@ __marimo__/
 training/models/checkpoint-*/
 training/models/runs/
 training/models/training_args.bin
+
+# Large dataset zips (not needed in repo)
+*_processed.zip
